lab1/Test/L1-A-1-12.cmm
struct {
}OWZlMVE4BiFkSjPPsJ_ ( int hPH9l4lQdAoOE2eVX [ 1370132104 
  ] [ 1077393891 ] ) {
  float ngRDs5hp 1995427459 = - - ! ! Lsg7DWtsb7g_AHxmHj 
    = - beD0i0mr ( ) [ IyZqPZZCDKZ ] * aJpteRWezyl2X2YR 
    / Y / ohGBS56CdYryq1OLs + u11xFLpxDw8ISpJ3E7IC >= 
    k >= PEski <= X < oRwhqOW422hOgvtb < P != T_wMR <= 
    tN8KsPRrjoWooQ418A && gFNYXxMD1le_ && _4 && Sh9FK 
    ;
  struct {
    int UGw_FIMCyNNDZaDsV0TG [ 2013997760 ] [ 653302688 
      ] [ 151488569 ] ;
    struct {
    }_mz = ZTWHEpkEgLeTny9oZ92 , aOPwraBcPrmplq7uxx7 
      else ;
  }MdKS , qVl = FiOpyZNXnWPyhWO0k ( Cdw ) [ Hj2lyisWz6g6kreRD 
    ] == * osRxIqlkGoFaGGSJcXlk > CEscUdJfPhFdpioWH , 
    k , sOlHAKFW ;
}
